# alephone

./: Glider Pro Sample1.flac  Glider Pro Sample2.flac  Makefile.am  configure.ac  musicDynamic.lua  vcpkg-configuration.json  vcpkg.json
.circleci/: config.yml
.github/: copilot-instructions.md
.github/workflows/: ci-build.yml  code-analysis.yml  linux.yml  mac-osx-arm.yml  mac-osx-x64.yml  release-linux.yml  release-mac-osx.yml  release-standalone-hub.yml  release-steam-linux.yml  release-steam-mac-os.yml  release-steam-windows.yml  release-windows.yml  windows-x64.yml  windows-x86.yml
PBProjects/: config.h
PBProjects/AlephOne.xcodeproj/: project.pbxproj
Source_Files/: main.cpp  shell.cpp
Source_Files/CSeries/: csalerts_sdl.cpp
Source_Files/FFmpeg/: SDL_ffmpeg.c
Source_Files/Files/: FileHandler.cpp  FileHandler.h  game_wad.cpp
Source_Files/GameWorld/: marathon2.cpp  scenery.cpp
Source_Files/Lua/: lua_map.cpp  lua_music.cpp  lua_music.h
Source_Files/Misc/: DefaultStringSets.cpp  Makefile.am  achievements.cpp  interface.cpp  interface.h  preferences.cpp  preferences.h  progress.h  sdl_network.h  steamshim_child.cpp  steamshim_child.h
Source_Files/Network/: ConnectPool.cpp  ConnectPool.h  Makefile.am  NetworkManager.cpp  NetworkManager.h  NetworkServer.cpp  NetworkServer.h  Pinger.cpp  Pinger.h  SSLP_API.h  SSLP_limited.cpp  StandaloneHub.cpp  StandaloneHub.h  StarGameProtocol.cpp  network.cpp  network.h  network_dialog_widgets_sdl.cpp  network_dialogs.cpp  network_dialogs.h  network_messages.cpp  network_messages.h  network_private.h  network_speaker_sdl.cpp  network_star.h  network_star_hub.cpp  network_star_spoke.cpp  network_udp.cpp
Source_Files/RenderOther/: fades.cpp  screen.cpp
Source_Files/Sound/: AudioPlayer.cpp  AudioPlayer.h  Decoder.cpp  Decoder.h  FFmpegDecoder.cpp  FFmpegDecoder.h  Music.cpp  Music.h  MusicPlayer.cpp  MusicPlayer.h  OpenALManager.cpp  OpenALManager.h  SndfileDecoder.cpp  SndfileDecoder.h  SoundManager.cpp  SoundManager.h  SoundManagerEnums.h  SoundPlayer.cpp  SoundPlayer.h  StreamPlayer.cpp  StreamPlayer.h
Source_Files/TCPMess/: CommunicationsChannel.cpp  (+1 more)
Steam/: Makefile.am  m1_linux.vdf  steamshim_parent.cpp
VisualStudio/: .gitignore  AlephOne.sln  AlephOne.vcxproj  AlephOne.vcxproj.filters
docs/: Lua.xml  XsltTransform.deps.json
tests/: Makefile.am  main.cpp  replay_film_test.cpp
vcpkg/: install-arm-osx.sh
(+23 files in other folders)
